--- a/layout-practice/layout.css
+++ b/layout-practice/layout.css
@@ -74,3 +74,12 @@ header {
 .product-info {
   text-align: right;
 }
+
+/* Product Reviews */
+
+#product-reviews {
+  background: skyblue;
+  color: white;
+  text-align: center;
+  padding: 50px;
+}
