--- a/layout-practice/layout.css
+++ b/layout-practice/layout.css
@@ -83,3 +83,24 @@ header {
   text-align: center;
   padding: 50px;
 }
+
+/* Footer */
+
+footer {
+  display: flex;
+  padding: 15px 10px 15px 10px;
+  font-size: 12px;
+}
+
+.footer-links {
+  flex: 1;
+}
+
+.footer-copyright {
+  flex: 1;
+  text-align: right;
+}
+
+.footer-copyright p {
+  margin: 0;
+}
